<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.bonkerstories.MainActivity"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to Bonker Stories! Fill in the blanks with the correct part of speech and press the button to see a bonkers story!"
        android:id="@+id/introTextView"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryLight"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noun1EditText"
        android:layout_marginTop="41dp"
        android:hint="NOUN"
        android:textColorHint="@color/colorAccent"
        android:singleLine="true"
        android:lines="1"
        android:layout_below="@+id/introTextView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/place1EditText"
        android:hint="PLACE"
        android:textColorHint="@color/colorAccent"
        android:singleLine="true"
        android:lines="1"
        android:layout_below="@+id/noun1EditText"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pluralNoun1EditText"
        android:hint="PLURAL NOUN"
        android:textColorHint="@color/colorAccent"
        android:layout_below="@+id/place1EditText"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:lines="1"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adj1EditText"
        android:hint="ADJECTIVE"
        android:textColorHint="@color/colorAccent"
        android:singleLine="true"
        android:lines="1"
        android:layout_below="@+id/pluralNoun1EditText"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noun2EditText"
        android:hint="NOUN"
        android:textColorHint="@color/colorAccent"
        android:singleLine="true"
        android:lines="1"
        android:layout_below="@+id/adj1EditText"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pastVerb1EditText"
        android:hint="VERB PAST TENSE"
        android:textColorHint="@color/colorAccent"
        android:layout_below="@+id/noun2EditText"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:lines="1"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/holiday1EditText"
        android:hint="HOLIDAY"
        android:textColorHint="@color/colorAccent"
        android:layout_below="@+id/pastVerb1EditText"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:lines="1"
        android:textAlignment="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Let&apos;s get bonkers!"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp" />
</RelativeLayout>
